# mesonarduino

./: .gitignore  Makefile  arduino_uno_cross.txt  avrdude-wrapper.sh  blink.cpp  blink.ino  main.cpp  meson.build  meson_options.txt  readme.md
cross/: arduino_leonardo.txt  arduino_mega_2560.txt  arduino_micro.txt  arduino_uno.txt  sparkfun_pro_micro.txt
subprojects/: arduinocore-avr.wrap
tools/: ino-to-cpp.sh
